--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Deepak Narayanan
 bio: Research Fellow, Microsoft Research
 
 # twitter summary info
-description: My academic websites
+description: My academic website
 
 # if it's an external image, update below for true
 # better with square images
@@ -12,11 +12,11 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
+CV: true
+CV-external: true
+CV-url: https://google.com/?q=my+resume
 
-url: https://sergiokopplin.github.io/indigo
+url: https://sdeepaknarayanan.github.io/
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
@@ -53,18 +53,18 @@ github: sdeepaknarayanan
 email: sdeepaknarayanan1@gmail.com
 
 authors:
-  johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
+  Deepak:
+    name: Deepak Narayanan
+    bio: Research Fellow, Microsoft Research
     external-image: false
     picture: assets/images/profile.jpg
     twitter: johndoe
-  jamesfoster:
-    name: James Foster
-    bio: A Man who develops software with coffee
-    external-image: false
-    picture: assets/images/james.jpg
-    twitter: jamesfoster
+# jamesfoster:
+#    name: James Foster
+#    bio: A Man who develops software with coffee
+#    external-image: false
+#    picture: assets/images/james.jpg
+#    twitter: jamesfoster
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
